# kitsune-core

./: .gitignore  kitsune.example.toml  pyproject.toml  requirements.txt
core/: __init__.py  cli.py  daemon.py  env.py  features.py
core/client/: __init__.py  qbittorrent.py
core/collection/: queue.py
core/database/: sqlite.py
core/detection/: __init__.py  playback.py  process.py  window.py
core/downloader/: __init__.py
core/error/: __init__.py  http.py  server.py
core/error/service/: anilist.py
core/helper/: file.py  misc.py  recognition.py
core/interfaces/database/: __init__.py
core/interfaces/detection/: __init__.py  base.py
core/interfaces/llm/: __init__.py  base.py
core/interfaces/recognition/: __init__.py  base.py
core/llm/: __init__.py  agent.py  gemini.py  openai_compatible.py  openrouter.py
core/media/: __init__.py  filesystem.py  probe.py
core/recognition/: __init__.py  aniparse_recognizer.py  llm_recognizer.py
core/rss/: __init__.py  extractor.py  matcher.py  rule_parser.py
core/server/: __init__.py  app.py  auth.py
core/service/: anilist.py
core/tracker/: __init__.py  local.py  sync.py
core/upgrade/: __init__.py  manager.py  policy.py
docs/: Database.md  Detection.md  Downloader.md  Feature-Flags.md  Home.md  LLM.md  Recognition.md  Server.md  Tracker.md
tests/: conftest.py  test_auth.py  test_cli.py  test_daemon.py  test_detection.py  test_env.py  test_extractor.py  test_features.py  test_llm.py  test_media.py  test_recognition.py  test_rss.py  test_server.py  test_service_trackers.py  test_tracker.py  test_upgrade.py
(+36 files in other folders)
